# la_taupe

./: .gitignore  Cargo.toml  README.md  build.rs  download-models.sh  launch_demo.sh
.github/workflows/: ci.yml
doc/: extraction.rb
src/: analysis.rs  datamatrix.rs  fi_extract.rs  file_utils.rs  image_utils.rs  lib.rs  main.rs  ocr.rs  ocrs.rs  riad_bank_name.csv  rib.rs  shapes.rs  tesseract.rs  text_utils.rs
src/http/: analyze.rs  mod.rs  ping.rs  server.rs  version.rs
src/text/: address.rs  mod.rs  patch.rs  simple_titulaire.rs
src/twoddoc/: certificate_store.rs  data_structure.rs  ddoc.rs  entete.rs  mod.rs  signature.rs  structure.json  trust_service.rs  utils.rs
tests/: http_tests.rs
tests/fixtures/rib/: banque_populaire.txt  banque_populaire_2.txt  banque_postale.txt  banque_postale_2.txt  bourso.txt  caisse_epargne.txt  caisse_epargne_2.txt  caisse_epargne_3.txt  credit_agricole.txt  credit_agricole_2.txt  credit_agricole_3.txt  credit_mutuel.txt  credit_mutuel_2.txt  fortuneo.txt  lcl.txt  lcl_2.txt  orange.txt  sg.txt  sg_2.txt
tests/fixtures/static_server/: package-lock.json  package.json  server.js
tests/helpers/: mod.rs
