[package]
name = "la_taupe"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"
license-file = "LICENSE.txt"
description = "La Taupe is a tool to extract administrative data from documents."
authors = ["See git log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rxing = "*"
nom = "*"
chrono = "*"
p256 = "*"
x509-cert = "*"
base32 = "*"
image = "*"
tempfile = "*"
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde-xml-rs = "*"
serde_json = "*"
ureq = "*"
url = "*"
